package com.ginko.payments.domain.model.enums;

public enum OrderStatus {
    DRAFT,
    APPROVED,
    REJECTED,
    PAID
}
