package com.ginko.payments.domain.model.enums;

public enum ProviderStatus {
    ACTIVE,
    INACTIVE
}
